# SelfBotRewrite

./: .gitignore  .gitmodules  CMakeLists.txt  Library.cmake  bot.settings  cURLOptions.cmake
cmake/: Library.cmake  cURLOptions.cmake
include/: Bot.h  BotSetup.h  BuiltInArguments.h  DebugInformation.h  Events.h  ISOTime.h  Main.h  MainLoop.h  Memory.h  Prefix.h  Settings.h  Sleep.h  SupportChannels.h  Time.h  Token.h  UserAgent.h  cURL.h
include/Commands/: Categories.h  Category.h  Command.h  Commands.h  DebugCommand.h  HelpCommand.h  TestCommand.h
include/Debugging/: Assert.h
include/Discord/: Application.h  Configuration.h  EmbedCreator.h  Intents.h  Locale.h  ObjectCreatorHelpers.h  Permissions.h  Status.h  User.h
include/Discord/API/: API.h  Event.h  Events.h
include/Discord/Gateway/: Dispatch.h  Error.h  Errors.h  Event.h  Events.h  Gateway.h
include/Discord/Objects/: Application.h  Channel.h  Emoji.h  Guild.h  GuildMember.h  Message.h  ObjectCreatorHelpers.h  Snowflake.h  User.h
include/Storage/: DynamicArray.h  DynamicDictionary.h
include/Threads/: Heartbeat.h  RateLimit.h  ThreadInternal.h
include/WebSocket/: cURL.h
source/: Bot.c  BotSetup.c  DebugInformation.c  Events.c  ISOTime.c  Main.c  MainLoop.c  Memory.c  Prefix.c  Settings.c  Sleep.c  SupportChannels.c  Time.c  Token.c  UserAgent.c  cURL.c
source/Commands/: Categories.c  Category.c  Command.c  Commands.c  DebugCommand.c  HelpCommand.c  TestCommand.c
source/Debugging/: Assert.c
source/Discord/: Application.c  Configuration.c  EmbedCreator.c  Intents.c  Locale.c  Permissions.c  Snowflake.c  Status.c  User.c
source/Discord/API/: API.c  Event.c  Events.c
source/Discord/Gateway/: Dispatch.c  Error.c  Errors.c  Event.c  Events.c  Gateway.c
source/Discord/Objects/: Application.c  Channel.c  Emoji.c  Guild.c  GuildMember.c  Message.c  Snowflake.c  User.c
source/Storage/: DynamicArray.c  DynamicDictionary.c
source/Threads/: Heartbeat.c  RateLimit.c
source/WebSocket/: cURL.c
test/: API.c  CMakeLists.txt  Gateway.c  HTTP.c  ISOTime.c  Snowflake.c  SnowflakeCreate.c  Time.c  User.c  WebSocket.c  cURL.c
